--- a/css/styles.css
+++ b/css/styles.css
@@ -321,8 +321,10 @@ a {
       text-align: center;
       margin-left: 20px;
       margin-right: 20px; }
+    #promo main .left_section .title {
+      font-size: 40px; }
     #promo main .left_section .subtitle {
-      font-size: 32px; }
+      font-size: 28px; }
   #intensives .card_container .card {
     margin: 30px 20px; }
   #about .footer_shinesquad .footer_shinesquad_prev {
