--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -397,8 +397,11 @@ a {
           margin-left: 20px;
           margin-right: 20px;
         }
+        .title {
+          font-size: 40px;
+        }
         .subtitle {
-          font-size: 32px;
+          font-size: 28px;
         }
       }
     }
