--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ a {
     margin-top: 75px;
     margin-bottom: 141px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
     margin-left: 20px;
     margin-right: 20px; }
@@ -276,6 +276,10 @@ a {
         line-height: 17px;
         color: #6E7884;
         margin-bottom: 30px; }
+    #about .cards .card:first-child {
+      padding-left: 0; }
+    #about .cards .card:last-child {
+      padding-right: 0; }
 
 #footer {
   height: 180px;
@@ -327,6 +331,12 @@ a {
       font-size: 28px; }
   #intensives .card_container .card {
     margin: 30px 20px; }
+  #about .cards {
+    justify-content: space-around; }
+    #about .cards .card:first-child {
+      padding-left: 30px; }
+    #about .cards .card:last-child {
+      padding-right: 30px; }
   #about .footer_shinesquad .footer_shinesquad_prev {
     text-align: center; }
   #about .footer_shinesquad .footer_shinesquad_desc {
