--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,15 @@ a {
   .button:hover {
     background-color: #1F75FF; }
 
+.disable_button {
+  text-decoration: none;
+  padding: 20px;
+  background-color: #808080;
+  pointer-events: none;
+  border-radius: 5px;
+  color: #F1F1F1;
+  cursor: default; }
+
 #scroll_top {
   width: 40px;
   height: 40px;
